--- a/Life_Assistent/things/static/css/detail.css
+++ b/Life_Assistent/things/static/css/detail.css
@@ -35,11 +35,27 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-a.share {
-    font-size:25px;
+a.share, .edit, .comment{
+    display:block;
+    width:120px;
+    height:30px;
+    font-size:20px;
     border: 2px solid green;
     border-radius:55px;
-    padding:10px;
-    background-color:rgb(8, 124, 167);
+    padding:18px;
+    background-color:rgb(0, 0, 139);
     color:rgb(242, 202, 199);
+}
+
+.share:hover, .edit:hover, .comment:hover {
+    color:rgb(139, 0, 139);
+    font-size:24px;
+}
+
+a.edit {
+    background-color:rgb(25, 25, 112);
+}
+
+a.comment {
+    background-color:rgb(0, 0, 255);
 }
