--- a/Life_Assistent/things/templates/tasks/detail.html
+++ b/Life_Assistent/things/templates/tasks/detail.html
@@ -18,7 +18,9 @@
             Поделиться
         </a>
     {% endif %}
-    <a href="{% url 'todo:edit_task' date=task.date %}">
-        Редактировать список дел
-    </a>
+    <p>
+        <a href="{% url 'todo:edit_task' date=task.date %}" class="edit">
+            Редактировать список дел
+        </a>
+    </p>
 {% endblock %}
